game now creates prs file if none is there and shows it as the message if the prs command is chosen from MainMenuScreen.cs

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 # .NET creates these when building and executing projects so they are not needed in the remote repository
 bin
 obj
+prs
 QuickType.sln
