change prs to prs.csv for formatting clarification

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 # .NET creates these when building and executing projects so they are not needed in the remote repository
 bin
 obj
-prs
+prs.csv
 .vscode
 QuickType.sln
